--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
         <div class="container">
             <!-- LOGO -->
             <a href="layout-one-1.html" class="logo-sticky">
-                <img src="images/logo-dark.png" alt="" class="logo-dark" height="32" />
-                <img src="images/logo-light.png" alt="" class="logo-light" height="32" />
+                <!-- <img src="images/logo-dark.png" alt="" class="logo-dark" height="32" />
+                <img src="images/logo-light.png" alt="" class="logo-light" height="32" /> -->
+                <p class="text-white mt-3">Zhara/Crewing</p>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="remixicon-menu-fill"></i>
