--- a/index.html
+++ b/index.html
@@ -46,20 +46,17 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mx-auto navbar-center" id="mySidenav">
                     <li class="nav-item active">
-                        <a href="layout-one-4.html#home" class="nav-link">Home</a>
+                        <a href="index.html#home"  class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="layout-one-4.html#services" class="nav-link">Services</a>
+                        <a href="index.html#services"  class="nav-link">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a href="layout-one-4.html#features" class="nav-link">Features</a>
+                        <a href="index.html#clients" class="nav-link">Clients</a>
                     </li>
                     <li class="nav-item">
-                        <a href="layout-one-4.html#clients" class="nav-link">Clients</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="layout-one-4.html#pricing" class="nav-link">Pricing</a>
-                    </li>
+                      <a href="index.html#chat_section" class="nav-link">Chat with us</a>
+                  </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -289,8 +286,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-7">
                     <div class="text-center title mb-4">
-                        <h5 class="font-weight-bold text-uppercase text-dark">What Our Customers Say</h5>
-                        <p class="text-muted">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit sed consequuntur as sequi nesciunt.</p>
+                        <h5 class="font-weight-bold text-uppercase text-dark">Companies that trust us!</h5>
+                        <p class="text-muted">List of companies we cooperate with.</p>
                     </div>
                 </div>
             </div>
@@ -302,8 +299,6 @@
                             <img src="images/client/img-1.jpg" alt="" class="img-fluid mx-auto d-block rounded-circle user-img">
                             <h5 class="text-dark mt-4 f-18 mb-0">Irene Devoe</h5>
                             <p class="text-muted f-14">Web Development, USA</p>
-                            <i class="remixicon-double-quotes-r h4 testi-icon"></i>
-                            <p class="text-muted f-15 mt-3 mb-0">Aeque porro quisquam est qui dolorem ipsum quia dolor sit amet consectetur numquam tempora.</p>
                         </div>
                     </div>
                     <!-- owl item and -->
@@ -312,8 +307,6 @@
                             <img src="images/client/img-2.jpg" alt="" class="img-fluid mx-auto d-block rounded-circle user-img">
                             <h5 class="text-dark mt-4 f-18 mb-0">Adrian Kidd</h5>
                             <p class="text-muted f-14">Web Designer, USA</p>
-                            <i class="remixicon-double-quotes-r h4 testi-icon"></i>
-                            <p class="text-muted f-15 mt-3 mb-0">Et harum quidem a rerum that facilis est et expedita libero tempore soluta nobis cumque as impedit.</p>
                         </div>
                     </div>
                     <!-- owl item and -->
@@ -322,8 +315,6 @@
                             <img src="images/client/img-3.jpg" alt="" class="img-fluid mx-auto d-block rounded-circle user-img">
                             <h5 class="text-dark mt-4 f-18 mb-0">Shari Turner</h5>
                             <p class="text-muted f-14">Graphic Designer, USA</p>
-                            <i class="remixicon-double-quotes-r h4 testi-icon"></i>
-                            <p class="text-muted f-15 mt-3 mb-0">Sed ut perspiciatis a unde omnis iste natus error sit as voluptatem accusantium laudantium.</p>
                         </div>
                     </div>
                     <!-- owl item and -->
@@ -332,8 +323,6 @@
                             <img src="images/client/img-4.jpg" alt="" class="img-fluid mx-auto d-block rounded-circle user-img">
                             <h5 class="text-dark mt-4 f-18 mb-0">Robert Story</h5>
                             <p class="text-muted f-14">Web Designer, USA</p>
-                            <i class="remixicon-double-quotes-r h4 testi-icon"></i>
-                            <p class="text-muted f-15 mt-3 mb-0">Aeque porro quisquam est qui dolorem ipsum quia dolor sit amet consectetur numquam tempora.</p>
                         </div>
                     </div>
                     <!-- owl item and -->
@@ -342,8 +331,6 @@
                             <img src="images/client/img-5.jpg" alt="" class="img-fluid mx-auto d-block rounded-circle user-img">
                             <h5 class="text-dark mt-4 f-18 mb-0">Lisa Traxler</h5>
                             <p class="text-muted f-14">Graphic Designer, USA</p>
-                            <i class="remixicon-double-quotes-r h4 testi-icon"></i>
-                            <p class="text-muted f-15 mt-3 mb-0">Et harum quidem a rerum that facilis est et expedita libero tempore soluta nobis cumque as impedit.</p>
                         </div>
                     </div>
                     <!-- owl item and -->
@@ -352,8 +339,6 @@
                             <img src="images/client/img-6.jpg" alt="" class="img-fluid mx-auto d-block rounded-circle user-img">
                             <h5 class="text-dark mt-4 f-18 mb-0">Michael Bang</h5>
                             <p class="text-muted f-14">Web Developer, USA</p>
-                            <i class="remixicon-double-quotes-r h4 testi-icon"></i>
-                            <p class="text-muted f-15 mt-3 mb-0">Sed ut perspiciatis a unde omnis iste natus error sit as voluptatem accusantium laudantium.</p>
                         </div>
                     </div>
                     <!-- owl item and -->
@@ -362,8 +347,6 @@
                             <img src="images/client/img-7.jpg" alt="" class="img-fluid mx-auto d-block rounded-circle user-img">
                             <h5 class="text-dark mt-4 f-18 mb-0">Joyce Yates</h5>
                             <p class="text-muted f-14">Web Designer, USA</p>
-                            <i class="remixicon-double-quotes-r h4 testi-icon"></i>
-                            <p class="text-muted f-15 mt-3 mb-0">Aeque porro quisquam est qui dolorem ipsum quia dolor sit amet consectetur numquam tempora.</p>
                         </div>
                     </div>
                     <!-- owl item and -->
@@ -374,7 +357,7 @@
     <!-- TESTIMONIAL END -->
 
     <!-- PRICING START -->
-    <section class="section bg-light" id="pricing">
+    <!-- <section class="section bg-light" id="pricing">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
@@ -430,20 +413,25 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- PRICING END -->
 
     <!-- CTA START -->
-    <section class="section position-relative bg-gradient">
+    <section class="section position-relative bg-gradient" id="chat_section">
         <div class="bg-cta-overlay"></div>
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="text-center">
-                        <h2 class="text-white mb-3">Do You Need Success Product Also ?</h2>
-                        <a href="layout-one-4.html#" class="btn btn-light mt-4">Estimate Project</a>
-                        <a href="layout-one-4.html#" class="text-white-50">
-                            <p class="mb-0 mt-4">Or contact with us</p>
+                        <h2 class="text-white mb-3">
+                          Still feel uncertain about us? 
+                          <br> Chat with us right now!
+                        </h2>
+                        <a href="#" class="btn btn-light mt-4" id="OpenChatBtn">
+                          Open Chat <i class="text-black service-icon remixicon-message-2-line"></i> 
+                        </a><br>
+                        <a href="mailto:admin@zhara.com.ua" class="btn p-2 text-white mt-4">
+                          email us <i class="remixicon-mail-line"></i>
                         </a>
                     </div>
                 </div>
@@ -525,15 +513,10 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/scrollspy.min.js"></script>
     <script src="js/jquery.easing.min.js"></script>
-    <!-- COUNTER -->
-    <script src="js/counter.int.js"></script>
     <!-- carousel -->
     <script src="js/owl.carousel.min.js"></script>
-    <!-- Magnific Popup -->
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/magnificpopup-int.js"></script>
-    <!-- Main Js -->
-    <script src="js/app.js"></script>
+    <!-- Default Js -->
+    <script src="js/default.js"></script>
 
 </body>
 </html>
