added send request info

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Modzy - Responsive Bootstrap 4 Landing Page Template</title>
+    <title>Zhara - Air Seaman Tickets </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Premium Bootstrap 4 Landing Page Template" />
-    <meta name="keywords" content="bootstrap 4, premium, marketing, multipurpose" />
-    <meta content="Themesdesign" name="author" />
+    <meta name="description" content="Company Website for Seaman and Crewing Agencies" />
+    <meta name="keywords" content="Air tickets, marine, Crewing Agencies, Seamans" />
     <!-- favicon -->
     <link rel="shortcut icon" href="images/favicon.ico">
 
@@ -81,9 +80,9 @@
                     <li class="nav-item">
                       <a href="index.html#contacts"  class="nav-link">Contacts</a>
                     </li> 
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                       <a href="index.html#chat_section" class="nav-link">Chat with us</a>
-                  </li>
+                  </li> -->
                 </ul>
                 <ul class="navbar-nav" id="socialmediasNav">
                     <li class="nav-item">
@@ -109,8 +108,9 @@
                     <h1 class="text-white hero-4-title font-weight-medium mb-4 line-height-1_4">Crewing/Seamans Agencies</h1>
                     <p class="text-white mb-5">Start Cooperation with us right now!</p>
                     <div class="text-center subcribe-form mt-4">
-                        <form action="#">
-                            <input type="text" placeholder="Enter your email...">
+                        <form action="#" autocomplete="on">
+                            <input type="email" name="email" required placeholder="Enter your email" id="RequestEmail"/>
+
                             <button 
                               type="submit" 
                               class="btn rounded-pill btn-purple event-button" 
@@ -479,7 +479,7 @@
     <!-- PRICING END -->
 
     <!-- CTA START -->
-    <section class="section position-relative bg-gradient" id="chat_section">
+    <!-- <section class="section position-relative bg-gradient" id="chat_section">
         <div class="bg-cta-overlay"></div>
         <div class="container">
             <div class="row justify-content-center">
@@ -499,7 +499,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- CTA END -->
 
     <!-- FOOTER START -->
@@ -570,12 +570,13 @@
         </div>
     </footer>
     <!-- FOOTER END -->
-
+    
     <!-- javascript -->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/scrollspy.min.js"></script>
     <script src="js/jquery.easing.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- carousel -->
     <script src="js/owl.carousel.min.js"></script>
     <!-- Default Js -->
