--- a/index.html
+++ b/index.html
@@ -333,33 +333,35 @@
                   <h1 class="text-white text-center">Want to find price now?</h1>
                   <div class="bg-light p-4">
                     <div class="row">
-                      <div class="col-lg-6 mt-2">
-                        <label for="from_airport"> From </label>
-                        <select class="form-control" id="from_airport">
-                          <option value="volvo">Volvo</option>
-                          <option value="z">Z</option>
-                          <option value="s">S</option>
-                        </select>
-                      </div>
-                      <div class="col-lg-6 mt-2">
-                        <label for="to_airport"> To </label>
-                        <select class="form-control" id="from_airport">
-                          <option value="volvo">Volvo</option>
-                          <option value="z">Z</option>
-                          <option value="s">S</option>
-                        </select>
+                      <div class="col-lg-12 mt-2">
+                        <label for="from_keyword"> Start typing City or Airport (FROM)</label>
+                      
+                        <input 
+                          type="text" 
+                          placeholder="City"   
+                          class="form-control event-input" 
+                          id="from_keyword" 
+                          data-eventhandler="PriceKeywordEntered"/>
                       </div>
                       <div class="col-12 mt-4">
-                        <div class="text-center">
-                          <i class="mr-1 remixicon-flight-takeoff-fill" style="font-size: 25px;color: #003bd5c4;"></i>
-                          <span class="mr-1">Choose dept. date</span>  
-                          <input 
-                            data-toggle="datepicker" 
-                            placeholder="m/d/y" 
-                            name="date_airport"
-                            required
-                            class="text-center d-inline border" 
-                            id="date_airport"/>
+                        <div class="row">
+                          <div class="col-lg-6 mt-2">
+                            <div class="more_less_three_days_radio_container">
+                              <label for="more_less_3_days">+/- 3 days?</label>
+                              <input type="checkbox" id="more_less_3_days">
+                            </div>
+                          </div>
+                          <div class="col-lg-6 mt-2">
+                            <i class="mr-1 remixicon-flight-takeoff-fill" style="font-size: 25px;color: #003bd5c4;"></i>
+                            <span class="mr-1">dept. date</span>  
+                            <input 
+                              data-toggle="datepicker" 
+                              placeholder="m/d/y" 
+                              name="date_airport"
+                              required
+                              class="text-center d-inline border" 
+                              id="date_airport"/>
+                          </div>
                         </div>
                         <div class="text-center mt-4">
                           <button class="btn btn-purple">Send Request</button>
