--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <!-- <p class="btn btn-purple mt-1 mb-1">Zhara/Crewing</p> -->
             </a>
 
-            <a href="tel:+380674805225" class="contacts_link btn btn-purple">
+            <a href="tel:+380674805225" class="contacts_link btn btn-custom-menu-phone btn-success">
               <i class="remixicon-phone-line"></i>
               +38(067) 480 52 25 
             </a>
@@ -81,7 +81,7 @@
                         <a href="index.html#home"  class="nav-link" data-topoffset="-80">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="index.html#services"  class="nav-link" data-topoffset="900">Services</a>
+                        <a href="index.html#services"  class="nav-link" data-topoffset="800">Services</a>
                     </li>
                     <li class="nav-item">
                       <a href="index.html#contacts"  class="nav-link" data-topoffset="0">Contacts</a>
@@ -155,19 +155,28 @@
             <button type="submit">CHECK SHIPPING</button>
           </form> -->
 
+         
+        </div>
+        <!-- end container --> 
+      </div>
+      <!-- end fixed-form -->
+      <div class="main-slider pt-4" style="display: contents;">
+        <div class="slide2"> </div>
+        <div class="slide1"> </div>
+      </div>
+
+      <div class="container" >
+        <div class="text-center text-white pt-4">
+          <h3>Почему мы?</h3>
+          <h4>Птому что мы лучшие!</h4>
+          <p>Lorem ipsum dolor sit.</p>
+
           <a href="index.html#services" class="btn btn-success mt-5 rounded-pill" id="ToServicesBtn">
             <i class=" pr-4 mt-1 remixicon-arrow-down-s-line ri-lg"></i> 
               Our Services 
             <i class=" pl-4 mt-1 remixicon-arrow-down-s-line ri-lg"></i>
           </a>
         </div>
-        <!-- end container --> 
-      </div>
-      <!-- end fixed-form -->
-      <div class="main-slider">
-        <div class="slide1"> </div>
-        <!-- end slider1 -->
-        <div class="slide2"> </div>
       </div>
     </section>
 
