--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-custom" id="navbar">
         <div class="container">
             <!-- LOGO -->
-            <a href="#" class="logo-sticky">
+            <a href="#" class="">
                 <img src="images/plane.png" alt="" class="logo-dark" style="filter: invert(100%);" height="48" />
                 <!-- <p class="btn btn-purple mt-1 mb-1">Zhara/Crewing</p> -->
             </a>
 
-            <a href="tel:+380674805225" class="contacts_link btn btn-custom-menu-phone btn-success">
+            <a href="tel:+380674805225" id="menu-phone" class="d-none contacts_link btn btn-custom-menu-phone btn-success">
               <i class="remixicon-phone-line"></i>
               +38(067) 480 52 25 
             </a>
