--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Company Website for Seaman and Crewing Agencies" />
     <meta name="keywords" content="Air tickets, marine, Crewing Agencies, Seamans" />
     <!-- favicon -->
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="images/favicon.png">
 
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -67,24 +67,37 @@
                 <img src="images/plane.png" alt="" class="logo-dark" style="filter: invert(100%);" height="48" />
                 <!-- <p class="btn btn-purple mt-1 mb-1">Zhara/Crewing</p> -->
             </a>
-
-            <a href="tel:+380674805225" id="menu-phone" class="d-none contacts_link btn btn-custom-menu-phone btn-success">
-              <i class="remixicon-phone-line"></i>
-              +38(067) 480 52 25 
-            </a>
+            <div id="middle-menu-container" class="d-none px-3 pb-1">
+              <!-- <a href="tel:+380674805225" id="menu-phone" class="d-block contacts_link btn btn-custom-menu-phone btn-success">
+                <i class="remixicon-phone-line"></i>
+                +38(067) 480 52 25 
+              </a> -->
+              <div class="d-flex justify-content-center mt-2">
+                <a href="tel:+380674805225" target="_blank" class="text-white mr-4">
+                  <i class="remixicon-phone-line"></i>
+                </a>
+                <a href="https://www.facebook.com/TKZhara/" target="_blank" class="text-white mr-3">
+                  <i class="remixicon-facebook-line"></i>
+                </a>
+                <a href="https://www.instagram.com/zhara.tour/" target="_blank" class="text-white ml-3">
+                  <i class="remixicon-instagram-line"></i>
+                </a>
+              </div>
+            </div>
+            
             <button class="navbar-toggler mt-0" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="remixicon-menu-fill"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mx-auto navbar-center" id="mySidenav">
                     <li class="nav-item">
-                        <a href="index.html#home"  class="nav-link" data-topoffset="-80">Home</a>
+                        <a href="index.html#home"  class="scroll_link nav-link" data-topoffset="-80">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="index.html#services"  class="nav-link" data-topoffset="800">Services</a>
+                        <a href="index.html#services"  class="scroll_link nav-link" data-topoffset="800">Services</a>
                     </li>
                     <li class="nav-item">
-                      <a href="index.html#contacts"  class="nav-link" data-topoffset="0">Contacts</a>
+                      <a href="index.html#contacts"  class="scroll_link nav-link" data-topoffset="0">Contacts</a>
                     </li> 
                     <!-- <li class="nav-item">
                       <a href="index.html#chat_section" class="nav-link">Chat with us</a>
