--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
     <section class="slider" id="home">
       <div class="fixed-form">
         <div class="container main-banner ">
-          <h3>Best Air tickets</h3>
-          <h5>Crewing and Seaman Agencies</h5>
+          <h3>Авиабилеты для моряков!</h3>
+          <h5>Крюинговым  и морским агенствам</h5>
           <!-- <form>
             <input type="text" placeholder="Tracking ID">
             &nbsp;
@@ -179,16 +179,22 @@
       </div>
 
       <div class="container" >
-        <div class="text-center text-white pt-4">
-          <h3>Почему мы?</h3>
-          <h4>Птому что мы лучшие!</h4>
-          <p>Lorem ipsum dolor sit.</p>
+        <div class="text-center text-white pt-4 mt-3">
+          <h3>Почему у нас? </h3>
+          <h4>Потому что мы гарантируем Вам <br> лучшие варианты маршрутов и самые низкие цены!</h4>
 
-          <a href="index.html#services" class="btn btn-success mt-5 rounded-pill" id="ToServicesBtn">
+          <a href="index.html#CheckPriceSection" data-topoffset="-310" class="btn btn-success mt-3 rounded-pill" id="ToPricesBtn">
+            
+              Проверить Цены
+           
+          </a>
+          <br>
+          <a href="index.html#services" id="ToServicesBtn" class="btn btn-default mt-4">
             <i class=" pr-4 mt-1 remixicon-arrow-down-s-line ri-lg"></i> 
-              Our Services 
+            Наш сервис:
             <i class=" pl-4 mt-1 remixicon-arrow-down-s-line ri-lg"></i>
           </a>
+          <!-- id="ToServicesBtn" -->
         </div>
       </div>
     </section>
@@ -375,7 +381,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-8 mt-5 mx-auto">
+                <div class="col-lg-8 mt-5 mx-auto" id="CheckPriceSection">
                   <h1 class="text-white text-center">Want to find price now?</h1>
                   <div class="bg-light p-4" id="PriceRequestSection">
                     <div class="row  mt-2">
