--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mx-auto navbar-center" id="mySidenav">
                     <li class="nav-item">
-                        <a href="index.html#home"  class="scroll_link nav-link" data-topoffset="-80">Home</a>
+                        <a href="index.html#home"  class="scroll_link nav-link" data-topoffset="0">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="index.html#services"  class="scroll_link nav-link" data-topoffset="800">Services</a>
+                        <a href="index.html#services"  class="scroll_link nav-link" data-topoffset="0">Services</a>
                     </li>
                     <li class="nav-item">
                       <a href="index.html#contacts"  class="scroll_link nav-link" data-topoffset="0">Contacts</a>
@@ -178,12 +178,12 @@
         <div class="slide1"> </div>
       </div>
 
-      <div class="container" >
+      <div class="container" id="second-main-screen-block">
         <div class="text-center text-white pt-4 mt-3">
           <h3>Почему у нас? </h3>
           <h4>Потому что мы гарантируем Вам <br> лучшие варианты маршрутов и самые низкие цены!</h4>
 
-          <a href="index.html#CheckPriceSection" data-topoffset="-310" class="btn btn-success mt-3 rounded-pill" id="ToPricesBtn">
+          <a href="index.html#CheckPriceSection" data-topoffset="0" class="btn btn-success mt-3 rounded-pill" id="ToPricesBtn">
             
               Проверить Цены
            
